# event-saver

./: CLAUDE.md  Dockerfile  EVENTS_DIGEST.md  IMPLEMENTATION_VERIFIED.md  PROJECT_CONTEXT.md  QUEUES_DIGEST.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  events_new.csv  pyproject.toml  success_booking.csv
.github/workflows/: publish-image.yml
alembic/: env.py
alembic/versions/: 188a4a37868a_add_is_read.py  31c851c306e9_delete_recipient_role.py  3a791de67f88_change_booking_id_to_nullable.py  4c0ec66f1c56_delete_recipient_role.py  5f1c2e9a8b1d_add_hash_to_events.py  9bb09c895183_create_events_table.py  9db481e61abb_delete_recipient_role.py  afce66b11b80_add_start_time_and_end_time.py  b0e296cc4b17_add_updated_at_to_booking_chat_events.py  b2c4f8a1d9e3_add_booking_projection_tables.py  c5d7f9e3a1b2_add_tracing_and_idempotency_columns.py
docs/: EXTRACTION_IMPROVEMENTS_IMPLEMENTED.md  EXTRACTION_IMPROVEMENTS_PROPOSAL.md  EXTRACTION_REFACTORED_FINAL.md  GETSTREAM_DECODER_MOVED.md  INTEGRATION_IMPROVEMENTS_COMPLETED.md  INTEGRATION_IMPROVEMENTS_SUMMARY.md  SERVICE_INTEGRATION_ANALYSIS.md
docs/architecture/: ARCHITECTURE_DECISION_RECORDS.md  C4_DIAGRAMS.md  DIAGRAMS_QUICKSTART.md  INTEGRATION_DIAGRAMS.md  README.md
event_saver/: config.py  event_types.py  ioc.py  logger.py  main.py  routing.py  utils.py
event_saver/adapters/: __init__.py  consumer.py  event_classification.py  event_projection_sql.py  event_store.py  publisher.py  sql.py
event_saver/application/services/: __init__.py  projection_executor.py
event_saver/application/use_cases/: __init__.py  ingest_event.py
event_saver/db/: __init__.py  models.py
event_saver/domain/models/: __init__.py  booking.py  event.py  participant.py
event_saver/domain/services/: __init__.py  booking_extractor.py  event_parser.py  participant_extractor.py
event_saver/interfaces/: __init__.py  consumer.py  event_store.py  projection.py  publisher.py  routing.py  sql.py
(+11 files in other folders)
