[project]
name = "event-saver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "cloudevents>=1.12.0",
    "dishka>=1.8.0",
    "fastapi>=0.135.1",
    "faststream[rabbit]>=0.6.7",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "ujson>=5.11.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
